--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,9 +28,11 @@
     "kysely": ">=0.28.0"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^24.6.0",
     "@types/pg": "^8.15.5",
     "@vitest/coverage-v8": "^3.2.4",
+    "better-sqlite3": "^12.4.1",
     "kysely": "^0.28.7",
     "pg": "^8.16.3",
     "tsup": "^8.5.0",
