--- a/packages/repository/package.json
+++ b/packages/repository/package.json
@@ -32,8 +32,10 @@
     "@kysera/core": "workspace:*"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^24.6.0",
     "@vitest/coverage-v8": "^3.2.4",
+    "better-sqlite3": "^12.4.1",
     "kysely": "^0.28.7",
     "pg": "^8.16.3",
     "tsup": "^8.5.0",
