--- a/packages/soft-delete/package.json
+++ b/packages/soft-delete/package.json
@@ -31,12 +31,15 @@
     "@kysera/repository": "workspace:*"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^22.11.0",
     "@vitest/coverage-v8": "^2.1.5",
+    "better-sqlite3": "^12.4.1",
     "kysely": "^0.28.7",
     "tsup": "^8.4.0",
     "typescript": "^5.7.3",
-    "vitest": "^2.1.5"
+    "vitest": "^2.1.5",
+    "zod": "^4.1.11"
   },
   "keywords": [
     "kysely",
