--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "build": "turbo run build",
     "test": "turbo run test",
     "test:coverage": "turbo run test:coverage",
+    "test:multi-db": "turbo run test:multi-db",
+    "test:docker": "tsx scripts/test-with-docker.ts",
+    "docker:up": "/usr/local/bin/docker compose -f docker-compose.test.yml up -d",
+    "docker:down": "/usr/local/bin/docker compose -f docker-compose.test.yml down -v",
     "lint": "turbo run lint",
     "typecheck": "turbo run typecheck",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
@@ -20,16 +24,24 @@
   "devDependencies": {
     "@changesets/cli": "^2.27.12",
     "@eslint/js": "^9.36.0",
+    "@swc/core": "^1.13.5",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^24.6.0",
+    "@types/pg": "^8.11.10",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
+    "better-sqlite3": "^12.4.1",
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-sonarjs": "^3.0.5",
     "eslint-plugin-unicorn": "^61.0.2",
+    "kysely": "^0.28.7",
+    "mysql2": "^3.11.5",
+    "pg": "^8.13.1",
     "prettier": "^3.6.2",
+    "tsx": "^4.20.6",
     "turbo": "^2.5.8",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.45.0"
