--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,6 +21,7 @@
     "test": "vitest run",
     "test:watch": "vitest watch",
     "test:coverage": "vitest run --coverage",
+    "test:multi-db": "vitest run test/multi-db.test.ts",
     "typecheck": "tsc --noEmit",
     "lint": "eslint ."
   },
