--- a/packages/repository/package.json
+++ b/packages/repository/package.json
@@ -21,12 +21,13 @@
     "test": "vitest run",
     "test:watch": "vitest watch",
     "test:coverage": "vitest run --coverage",
+    "test:multi-db": "vitest run test/multi-db.test.ts",
     "typecheck": "tsc --noEmit",
     "lint": "eslint ."
   },
   "peerDependencies": {
     "kysely": ">=0.28.0",
-    "zod": ">=3.22.0"
+    "zod": ">=4.1.0"
   },
   "dependencies": {
     "@kysera/core": "workspace:*"
@@ -34,11 +35,14 @@
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^24.6.0",
+    "@types/pg": "^8.15.5",
     "@vitest/coverage-v8": "^3.2.4",
     "better-sqlite3": "^12.4.1",
     "kysely": "^0.28.7",
+    "mysql2": "^3.15.1",
     "pg": "^8.16.3",
     "tsup": "^8.5.0",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4",
     "zod": "^4.1.11"
