--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,6 +35,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "better-sqlite3": "^12.4.1",
     "kysely": "^0.28.7",
+    "mysql2": "^3.15.1",
     "pg": "^8.16.3",
     "tsup": "^8.5.0",
     "typescript": "^5.9.2",
