feat: complete Phase 3 Day 18 - Documentation
**Objective**: Create comprehensive documentation suite for production usage

## Changes Made

### 1. TypeDoc Configuration (typedoc.json, package.json)
**Added**: Professional API documentation tooling

**Setup**:
- Installed TypeDoc ^0.28.13 as dev dependency
- Created typedoc.json with comprehensive configuration
- Entry points for all 6 packages (@kysera/core, repository, migrations, soft-delete, audit, timestamps)
- Configured to exclude test files (*.test.ts, *.spec.ts, *.bench.ts)
- Output directory: docs/api
- GitHub Pages ready configuration

**Scripts Added**:
```json
"docs": "typedoc",
"docs:serve": "pnpm docs && npx http-server docs/api -p 8080 -o"
```

**Configuration Highlights**:
- Entry point strategy: expand (for monorepo)
- Categorized by package with clear navigation
- Markdown support with README.md integration
- Git integration with main branch tracking
- Clean output directory on each build

### 2. Best Practices Guide (BEST_PRACTICES.md)
**Created**: Comprehensive production patterns guide (600+ lines)

**Content Structure** (10 major sections):

1. **General Principles**
   - Keep repositories thin
   - Use TypeScript strict mode
   - Prefer composition over inheritance

2. **Repository Pattern**
   - Create repository factories
   - Define clear schema boundaries
   - Encapsulate database access

3. **Transaction Management**
   - Use transactions for related operations
   - Keep transactions short
   - Handle rollbacks explicitly
   - Don't mix executors

4. **Validation Strategy**
   - Environment-based validation
   - Validate at API boundaries
   - Custom validation for complex rules

5. **Error Handling**
   - Use typed errors
   - Log errors with context
   - Never swallow errors

6. **Pagination**
   - Cursor pagination for large datasets
   - Offset pagination for page numbers
   - Performance considerations

7. **Plugin Usage**
   - Order plugins correctly
   - Configure per-table
   - A

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "lint": "turbo run lint",
     "typecheck": "turbo run typecheck",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "docs": "typedoc",
+    "docs:serve": "pnpm docs && npx http-server docs/api -p 8080 -o",
     "changeset": "changeset",
     "version": "changeset version",
     "publish": "turbo run build lint test && changeset publish"
@@ -43,6 +45,7 @@
     "prettier": "^3.6.2",
     "tsx": "^4.20.6",
     "turbo": "^2.5.8",
+    "typedoc": "^0.28.13",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.45.0"
   },
