--- a/packages/repository/tsconfig.json
+++ b/packages/repository/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "rootDir": ".",
     "outDir": "./dist",
     "baseUrl": ".",
-    "composite": true
+    "composite": true,
+    "skipLibCheck": true
   },
   "include": ["src/**/*", "test/**/*", "*.config.ts"],
   "exclude": ["node_modules", "dist"]
