--- a/package.json
+++ b/package.json
@@ -32,14 +32,13 @@
     "@eslint/js": "^9.36.0",
     "@swc/core": "^1.13.5",
     "@types/better-sqlite3": "^7.6.13",
-    "@types/inquirer": "^9.0.7",
     "@types/node": "^24.6.0",
     "@types/pg": "^8.11.10",
     "@types/semver": "^7.5.8",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
+    "@xec-sh/kit": "^0.8.3",
     "better-sqlite3": "^12.4.1",
-    "chalk": "^5.3.0",
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
@@ -47,7 +46,6 @@
     "eslint-plugin-sonarjs": "^3.0.5",
     "eslint-plugin-unicorn": "^61.0.2",
     "glob": "^11.0.3",
-    "inquirer": "^10.2.2",
     "kysely": "^0.28.7",
     "mysql2": "^3.15.1",
     "pg": "^8.16.3",
