fix: resolve test execution errors in CI/CD
## Fixed Issues:
1. **Better-SQLite3 bindings error**: Added rebuild step for better-sqlite3 in GitHub Actions
   - Error: "Could not locate the bindings file"
   - Solution: Added `pnpm rebuild better-sqlite3 --recursive` after dependency installation
   - Applied to both release.yml and cli-release.yml workflows

2. **Undefined 'destroy' method error**: Created safe cleanup helpers for tests
   - Error: "Cannot read properties of undefined (reading 'destroy')"
   - Solution: Created safeDbDestroy() helper that checks if method exists before calling
   - Added safeSqliteClose() helper for SQLite connections
   - Located in packages/core/test/helpers/cleanup.ts

## Changes Made:
- Updated .github/workflows/release.yml: Added better-sqlite3 rebuild step
- Updated .github/workflows/cli-release.yml: Added better-sqlite3 rebuild step
- Created packages/core/test/helpers/cleanup.ts: Safe cleanup utilities
- Created packages/core/test/helpers/index.ts: Export helpers
- Updated packages/migrations/test/migrations.test.ts: Use safe cleanup helpers

## Impact:
- Tests now pass reliably in GitHub Actions
- Better-SQLite3 works correctly on Ubuntu runners
- Graceful handling of database connection cleanup
- No more undefined method errors

These changes ensure all tests pass in CI/CD environments (Ubuntu with Node.js 20.x and 22.x)

--- a/.github/workflows/cli-release.yml
+++ b/.github/workflows/cli-release.yml
@@ -38,7 +38,10 @@ jobs:
           cache: 'pnpm'
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: |
+          pnpm install --frozen-lockfile
+          # Rebuild better-sqlite3 for the current platform
+          pnpm rebuild better-sqlite3 --recursive
 
       - name: Run tests
         run: |
@@ -76,7 +79,10 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: |
+          pnpm install --frozen-lockfile
+          # Rebuild better-sqlite3 for the current platform
+          pnpm rebuild better-sqlite3 --recursive
 
       - name: Build CLI
         run: |
