--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "release:ci": "tsx scripts/release.ts --skip-tests --force",
     "changeset": "changeset",
     "changeset:version": "changeset version",
-    "changeset:publish": "changeset publish"
+    "changeset:publish": "changeset publish",
+    "postinstall": "pnpm rebuild better-sqlite3 2>/dev/null || true"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
