fix: enforce TypeScript strict mode compliance across CLI and add auto-fix tooling
- Replace dot notation with bracket notation for dynamic property access to satisfy noPropertyAccessFromIndexSignature
- Remove unused logger imports across audit, db, and migrate commands
- Fix spinner type assertions for @xec-sh/kit compatibility
- Add non-interactive environment checks in init command
- Replace unsafe SQL string interpolation with sql.id() for table names
- Fix transaction API usage (execute with callback instead of commit/rollback)
- Add lint:fix and fix:all commands to package.json for automated code quality maintenance
- Update test utilities and vitest configuration
- Add test migrations and configuration files for CLI testing

This commit achieves full TypeScript strict mode compliance (noImplicitAny, noPropertyAccessFromIndexSignature, etc.) and provides tooling to maintain code quality standards automatically.

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "docker:up": "/usr/local/bin/docker compose -f docker-compose.test.yml up -d",
     "docker:down": "/usr/local/bin/docker compose -f docker-compose.test.yml down -v",
     "lint": "turbo run lint",
+    "lint:fix": "eslint . --fix",
     "typecheck": "turbo run typecheck",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "fix:all": "pnpm lint:fix && pnpm format",
     "docs": "typedoc",
     "docs:serve": "pnpm docs && npx http-server docs/api -p 8080 -o",
     "release": "tsx scripts/release.ts",
