--- a/packages/timestamps/tsconfig.json
+++ b/packages/timestamps/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "rootDir": ".",
     "outDir": "dist",
+    "composite": true,
     "types": ["vitest/globals", "node"],
     "skipLibCheck": true
   },
