--- a/turbo.json
+++ b/turbo.json
@@ -6,7 +6,7 @@
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**"],
+      "outputs": ["dist/**", "build/**"],
       "env": ["NODE_ENV"]
     },
     "dev": {
