--- a/.github/workflows/cli-release.yml
+++ b/.github/workflows/cli-release.yml
@@ -27,9 +27,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: pnpm/action-setup@v3
-        with:
-          version: 10
+      - uses: pnpm/action-setup@v4
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
@@ -39,26 +37,14 @@ jobs:
 
       - name: Install system dependencies
         run: |
-          # Install build tools required for native modules
           sudo apt-get update
           sudo apt-get install -y python3 python3-setuptools python-is-python3 make g++ build-essential
 
       - name: Install dependencies
+        env:
+          PYTHON: python3
         run: |
-          # Set npm to use python3
-          npm config set python python3
-          # Install all dependencies
           pnpm install --frozen-lockfile
-          # Rebuild better-sqlite3 specifically
-          pnpm rebuild better-sqlite3
-          # Alternative: use postinstall for better-sqlite3
-          cd node_modules/.pnpm && \
-          for dir in better-sqlite3*/node_modules/better-sqlite3; do \
-            if [ -d "$dir" ]; then \
-              echo "Rebuilding in $dir"; \
-              cd "$dir" && npm run install --build-from-source && cd -; \
-            fi; \
-          done || true
 
       - name: Run tests
         run: |
@@ -85,38 +71,24 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: pnpm/action-setup@v3
-        with:
-          version: 10
+      - uses: pnpm/action-setup@v4
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 20.x
+          node-version: 22
           cache: 'pnpm'
           registry-url: 'https://registry.npmjs.org'
 
       - name: Install system dependencies
         run: |
-          # Install build tools required for native modules
           sudo apt-get update
           sudo apt-get install -y python3 python3-setuptools python-is-python3 make g++ build-essential
 
       - name: Install dependencies
+        env:
+          PYTHON: python3
         run: |
-          # Set npm to use python3
-          npm config set python python3
-          # Install all dependencies
           pnpm install --frozen-lockfile
-          # Rebuild better-sqlite3 specifically
-          pnpm rebuild better-sqlite3
-          # Alternative: use postinstall for better-sqlite3
-          cd node_modules/.pnpm && \
-          for dir in better-sqlite3*/node_modules/better-sqlite3; do \
-            if [ -d "$dir" ]; then \
-              echo "Rebuilding in $dir"; \
-              cd "$dir" && npm run install --build-from-source && cd -; \
-            fi; \
-          done || true
 
       - name: Build CLI
         run: |
