--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,9 +35,7 @@ jobs:
           fetch-depth: 0
 
       - name: Setup PNPM
-        uses: pnpm/action-setup@v3
-        with:
-          version: 10
+        uses: pnpm/action-setup@v4
 
       - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
@@ -52,21 +50,10 @@ jobs:
           sudo apt-get install -y python3 python3-setuptools python-is-python3 make g++ build-essential
 
       - name: Install dependencies
+        env:
+          PYTHON: python3
         run: |
-          # Set npm to use python3
-          npm config set python python3
-          # Install all dependencies
           pnpm install --frozen-lockfile
-          # Rebuild better-sqlite3 specifically
-          pnpm rebuild better-sqlite3
-          # Alternative: use postinstall for better-sqlite3
-          cd node_modules/.pnpm && \
-          for dir in better-sqlite3*/node_modules/better-sqlite3; do \
-            if [ -d "$dir" ]; then \
-              echo "Rebuilding in $dir"; \
-              cd "$dir" && npm run install --build-from-source && cd -; \
-            fi; \
-          done || true
 
       - name: Build packages
         run: pnpm build
@@ -97,14 +84,12 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup PNPM
-        uses: pnpm/action-setup@v3
-        with:
-          version: 10
+        uses: pnpm/action-setup@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20.x
+          node-version: 22
           cache: 'pnpm'
           registry-url: 'https://registry.npmjs.org'
 
@@ -115,21 +100,10 @@ jobs:
           sudo apt-get install -y python3 python3-setuptools python-is-python3 make g++ build-essential
 
       - name: Install dependencies
+        env:
+          PYTHON: python3
         run: |
-          # Set npm to use python3
-          npm config set python python3
-          # Install all dependencies
           pnpm install --frozen-lockfile
-          # Rebuild better-sqlite3 specifically
-          pnpm rebuild better-sqlite3
-          # Alternative: use postinstall for better-sqlite3
-          cd node_modules/.pnpm && \
-          for dir in better-sqlite3*/node_modules/better-sqlite3; do \
-            if [ -d "$dir" ]; then \
-              echo "Rebuilding in $dir"; \
-              cd "$dir" && npm run install --build-from-source && cd -; \
-            fi; \
-          done || true
 
       - name: Configure Git
         run: |
