feat(executor): add Unified Execution Layer for plugin-aware Kysely operations
BREAKING CHANGE: Plugins now work with both Repository and DAL patterns via @kysera/executor

## New Package: @kysera/executor

The Unified Execution Layer provides plugin-aware Kysely wrapper that enables
plugins to intercept queries across both Repository and DAL patterns.

### Core Features:
- `createExecutor(db, plugins)` - Create plugin-aware executor
- `KyseraExecutor<DB>` type - Extends Kysely with plugin interception
- Proxy-based interception for selectFrom, insertInto, updateTable, deleteFrom
- Transaction plugin propagation via `wrapTransaction()`
- Zero overhead path when no plugins have `interceptQuery`

### Plugin Interface:
- `onInit(executor)` - Lifecycle hook for initialization
- `interceptQuery(qb, context)` - Query builder interception (sync only)
- `extendRepository(repo)` - Repository method extensions

### Plugin System:
- `validatePlugins()` - Detect duplicates, conflicts, missing dependencies
- `resolvePluginOrder()` - Topological sort with priority support
- `PluginValidationError` - Typed errors for plugin issues

## Package Updates

### @kysera/dal
- Now accepts `KyseraExecutor` in `createContext()`
- Plugin interceptors automatically applied to DAL queries
- `withTransaction()` preserves plugins across transaction boundary

### @kysera/repository
- `createORM(db, plugins)` uses executor internally
- `orm.createContext()` creates DAL context with shared plugins
- `orm.transaction()` enables CQRS-lite pattern (Repository + DAL)

### @kysera/soft-delete
- Implements `interceptQuery` for automatic `deleted_at IS NULL` filtering
- Works with both Repository (via extendRepository) and DAL (via interceptQuery)

### @kysera/rls
- Implements `interceptQuery` for row-level security filtering
- Policy evaluation in both Repository and DAL patterns

## Performance Benchmarks (from tests)
- Zero overhead path: <5% when no interceptors
- With 1 plugin: <35% overhead
- With 5

--- a/packages/repository/package.json
+++ b/packages/repository/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kysera/repository",
-  "version": "0.6.1",
+  "version": "0.7.0",
   "description": "Repository pattern for Kysera ORM with smart validation",
   "type": "module",
   "main": "./dist/index.js",
@@ -35,7 +35,9 @@
     }
   },
   "dependencies": {
-    "@kysera/core": "workspace:*"
+    "@kysera/core": "workspace:*",
+    "@kysera/dal": "workspace:*",
+    "@kysera/executor": "workspace:*"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
