docs: clarify Kysera is a data access toolkit, not an ORM
This commit updates all documentation to accurately describe Kysera as a
"type-safe data access toolkit" rather than an "ORM", preventing developer
confusion about its actual capabilities.

## Rationale

Traditional ORMs typically provide:
- Entity mapping (object-to-table definitions)
- Unit of Work pattern
- Identity Map
- Lazy/eager loading for relationships
- Automatic relationship management

Kysera provides NONE of these. Instead, Kysera offers:
- Repository pattern with validation
- Functional Data Access Layer (DAL)
- Plugin ecosystem (soft-delete, RLS, audit, timestamps)
- Type-safe query composition via Kysely

## Changes Summary

### Root Files
- README.md: "TypeScript ORM" → "Type-safe data access toolkit"
- CLAUDE.md: Updated project description
- package.json: Updated description field

### Website
- docusaurus.config.ts: Updated tagline
- src/pages/index.tsx: Updated title and meta description
- docs/introduction.md: Added clarification about not being an ORM
- docs/core-concepts/*.md: Updated terminology throughout
- docs/guides/*.md: Replaced ORM references
- docs/api/*.md: Updated all API documentation
- docs/examples/*.md: Updated example descriptions
- docs/plugins/*.md: Updated plugin documentation
- docs/cli/overview.md: Updated CLI description

### Package Descriptions (13 packages)
All package.json files updated:
- "description": Removed "ORM" references
- "keywords": Replaced "orm" with "data-access"

Packages: core, dal, repository, executor, soft-delete, rls, audit,
timestamps, debug, infra, testing, migrations, cli

### Package READMEs (12 files)
Updated headers and content in all package README files:
- "Kysera ORM" → "Kysera" or "Kysera toolkit"
- Added clarification in repository/README.md about createORM function

### Source Code Comments (12 files)
Updated JSDoc and comments in:
- packages/*/src/index.ts - Module descriptions
- packages/repository/src/plugin.ts - Interface and

--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kysera/cli",
   "version": "0.6.1",
-  "description": "Comprehensive command-line interface for Kysera ORM",
+  "description": "Comprehensive CLI for Kysera data access toolkit",
   "type": "module",
   "bin": {
     "kysera": "./dist/index.js"
@@ -34,7 +34,7 @@
   },
   "keywords": [
     "kysera",
-    "orm",
+    "data-access",
     "cli",
     "database",
     "migrations",
