--- a/packages/debug/package.json
+++ b/packages/debug/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kysera/debug",
   "version": "0.6.1",
-  "description": "Debug utilities for Kysera ORM - query logging, profiling, SQL formatting",
+  "description": "Debug utilities for Kysely - query logging, profiling, SQL formatting",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -40,7 +40,7 @@
   },
   "keywords": [
     "kysely",
-    "orm",
+    "data-access",
     "database",
     "debug",
     "profiling",
