--- a/packages/audit/package.json
+++ b/packages/audit/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kysera/audit",
   "version": "0.6.1",
-  "description": "Audit logging plugin for Kysera ORM",
+  "description": "Audit logging plugin for Kysely repositories",
   "type": "module",
   "exports": {
     ".": {
@@ -62,7 +62,7 @@
   },
   "keywords": [
     "kysely",
-    "orm",
+    "data-access",
     "typescript",
     "audit",
     "logging",
