--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kysera/infra",
   "version": "0.6.1",
-  "description": "Infrastructure utilities for Kysera ORM - health checks, retry, circuit breaker, graceful shutdown",
+  "description": "Infrastructure utilities for Kysely - health checks, retry, circuit breaker, graceful shutdown",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -61,7 +61,7 @@
   },
   "keywords": [
     "kysely",
-    "orm",
+    "data-access",
     "database",
     "health",
     "retry",
