--- a/packages/rls/package.json
+++ b/packages/rls/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kysera/rls",
   "version": "0.7.0",
-  "description": "Row-Level Security plugin for Kysera ORM - declarative policies, query transformation, native RLS support",
+  "description": "Row-Level Security plugin for Kysely - declarative policies, query transformation, native RLS support",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -60,7 +60,7 @@
   },
   "keywords": [
     "kysely",
-    "orm",
+    "data-access",
     "database",
     "typescript",
     "sql",
