--- a/packages/timestamps/package.json
+++ b/packages/timestamps/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kysera/timestamps",
   "version": "0.6.1",
-  "description": "Automatic timestamp management plugin for Kysera ORM",
+  "description": "Automatic timestamp management plugin for Kysely repositories",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -26,7 +26,7 @@
   },
   "keywords": [
     "kysely",
-    "orm",
+    "data-access",
     "timestamps",
     "created_at",
     "updated_at",
