feat(dialects): add @kysera/dialects package with dialect-specific utilities
## New Package: @kysera/dialects

Add a new package providing dialect-specific utilities for Kysely database operations with support for PostgreSQL, MySQL, and SQLite.

### Features
- Unified adapter interface (`DialectAdapter`) for consistent cross-database operations
- Connection URL parsing and building utilities
- Database error detection (unique, foreign key, not-null constraints)
- Schema introspection (tableExists, getTableColumns, getTables)
- Dialect-specific SQL helpers (escapeIdentifier, getCurrentTimestamp, formatDate)
- Testing utilities (truncateAllTables, getDatabaseSize)
- Zero runtime dependencies (only kysely peer dependency)

### Adapters
- `PostgresAdapter` - PostgreSQL support with error codes (23505, 23503, 23502)
- `MySQLAdapter` - MySQL support with ER_* error codes and backtick escaping
- `SQLiteAdapter` - SQLite support with message-based error detection

### Exports
- Factory: `getAdapter`, `createDialectAdapter`, `registerAdapter`
- Connection: `parseConnectionUrl`, `buildConnectionUrl`, `getDefaultPort`
- Helpers: `tableExists`, `getTableColumns`, `getTables`, `escapeIdentifier`, etc.
- Types: `DatabaseDialect`, `ConnectionConfig`, `DialectAdapter`

## Documentation

- Add comprehensive README.md for @kysera/dialects (1000+ lines)
- Add website documentation at docs/api/dialects.md (900+ lines)
- Update sidebars.ts to include @kysera/dialects in Infrastructure category
- Update API overview with @kysera/dialects package information

## Other Changes

- Update package versions to 0.7.2
- Add query helpers to @kysera/core (applyOffset, applyDateRange)
- Enhance repository with context-aware operations and upsert improvements
- Add comprehensive tests for new features
- Remove outdated spec files (roadmap.md, specs/)

--- a/packages/dialects/package.json
+++ b/packages/dialects/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@kysera/infra",
+  "name": "@kysera/dialects",
   "version": "0.7.2",
-  "description": "Infrastructure utilities for Kysely - health checks, retry, circuit breaker, graceful shutdown",
+  "description": "Dialect-specific utilities for Kysely - PostgreSQL, MySQL, SQLite support",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -9,22 +9,6 @@
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
-    },
-    "./health": {
-      "types": "./dist/health/index.d.ts",
-      "import": "./dist/health/index.js"
-    },
-    "./resilience": {
-      "types": "./dist/resilience/index.d.ts",
-      "import": "./dist/resilience/index.js"
-    },
-    "./pool": {
-      "types": "./dist/pool/index.d.ts",
-      "import": "./dist/pool/index.js"
-    },
-    "./shutdown": {
-      "types": "./dist/shutdown.d.ts",
-      "import": "./dist/shutdown.js"
     }
   },
   "files": [
@@ -43,9 +27,6 @@
   "peerDependencies": {
     "kysely": ">=0.28.8"
   },
-  "dependencies": {
-    "@kysera/core": "workspace:*"
-  },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^25.0.3",
@@ -61,20 +42,19 @@
   },
   "keywords": [
     "kysely",
-    "data-access",
+    "dialect",
+    "postgres",
+    "mysql",
+    "sqlite",
     "database",
-    "health",
-    "retry",
-    "circuit-breaker",
-    "resilience",
-    "infrastructure"
+    "sql"
   ],
   "author": "Kysera Team",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kysera-dev/kysera.git",
-    "directory": "packages/infra"
+    "directory": "packages/dialects"
   },
   "bugs": {
     "url": "https://github.com/kysera-dev/kysera/issues"
