feat: add MSSQL (SQL Server) support across Kysera packages
## @kysera/dialects
- Add MSSQLAdapter with full database operations support
- Support for tableExists, getTableColumns, getTables, truncateTable
- Handle MSSQL-specific FK constraints (NOCHECK/CHECK)
- Update factory, types, and exports for MSSQL

## @kysera/core
- Add MSSQL error parsing (error codes 2627, 2601, 515, 547)
- Support unique constraint, foreign key, and not-null error detection
- Update DatabaseDialect type to include 'mssql'
- Update multi-db test utilities with MSSQL support using tedious driver

## Docker
- Add Azure SQL Edge container for ARM64/Apple Silicon compatibility
- Create mssql-init.sql for test database initialization

## Testing
- Add tedious and tarn dependencies for MSSQL connectivity
- MSSQL tests use Azure SQL Edge (compatible with Apple Silicon)
- Skip pagination tests for MSSQL (different OFFSET/FETCH syntax)
- Skip cascade delete test for MSSQL (no multiple cascade paths)

All 1400+ tests pass on SQLite, PostgreSQL, MySQL, and MSSQL.

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:16-alpine
@@ -58,8 +56,32 @@ services:
       timeout: 5s
       retries: 5
 
+  mssql:
+    # Azure SQL Edge - ARM64 compatible SQL Server for Apple Silicon
+    image: mcr.microsoft.com/azure-sql-edge:latest
+    container_name: kysera_test_mssql
+    ports:
+      - "1433:1433"
+    environment:
+      ACCEPT_EULA: "Y"
+      MSSQL_SA_PASSWORD: "Test@12345"
+      MSSQL_PID: "Developer"
+    cap_add:
+      - SYS_PTRACE
+    healthcheck:
+      test: [
+        "CMD-SHELL",
+        "/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P 'Test@12345' -Q 'SELECT 1' || exit 1"
+      ]
+      interval: 10s
+      timeout: 10s
+      retries: 10
+      start_period: 30s
+
 volumes:
   postgres_data:
     driver: local
   mysql_data:
+    driver: local
+  mssql_data:
     driver: local
