--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -40,6 +40,8 @@
     "kysely": "^0.28.9",
     "mysql2": "^3.16.0",
     "pg": "^8.16.3",
+    "tarn": "^3.0.2",
+    "tedious": "^19.2.0",
     "tsup": "^8.5.1",
     "typescript": "^5.9.3",
     "vitest": "^4.0.16"
