docs: comprehensive documentation consistency audit and fixes
Performed thorough cross-package documentation audit using parallel
subagents to ensure all documentation matches the staged code changes.
Fixed 66 inconsistencies across 12 documentation files.

## Critical Fixes (Breaking Examples)

### @kysera/infra
- CircuitBreaker methods are now async (added await to all examples)
  - getState() → Promise<CircuitBreakerState>
  - isOpen()/isClosed() → Promise<boolean>
  - reset()/forceOpen() → Promise<void>
- Added missing RetryOptions: jitterFactor, maxDelayMs
- Added MSSQL transient error codes (-1, -2, 233, 1205, 1222, etc.)

### @kysera/core
- Fixed UniqueConstraintError constructor: (constraint, table, columns)
- Fixed ForeignKeyError constructor: (constraint, table, referencedTable)
- Fixed BadRequestError constructor: (message) - removed detail param
- Added error code categories: Audit, Config, FileSystem, Network
- Fixed applyOffset limit bounds: 100 (not 10,000)

### @kysera/executor
- Fixed onInit parameter name: executor → db
- Added operation types: 'replace' | 'merge' for MySQL/MSSQL

## API Documentation Updates

### @kysera/dialects
- Added MSSQL adapter exports and documentation
- Changed DatabaseDialect → Dialect (from @kysera/core)
- Added deprecation warning for DatabaseDialect
- Added MSSQL default port (1433) and error codes
- Added complete MSSQL dialect-specific behavior section

### @kysera/dal
- Fixed ParallelResult type signature (3 params, not 1)
- Added TransactionOptionsWithLogger interface
- Updated dependencies documentation (added @kysera/core)

### @kysera/rls
- Added primaryKeyColumn option to RLSPluginOptions
- Added warning: filter conditions must be synchronous

### @kysera/timestamps
- Added Database Compatibility section
- Documented RETURNING clause fallback for MySQL/MSSQL
- Explained insert-then-fetch strategy and performance implications

### @kysera/audit
- Added Performance Optimizations (v0.7.3) section
- Documented bat

--- a/packages/dal/package.json
+++ b/packages/dal/package.json
@@ -25,6 +25,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@kysera/core": "workspace:*",
     "@kysera/executor": "workspace:*"
   },
   "peerDependencies": {
