--- a/packages/dialects/package.json
+++ b/packages/dialects/package.json
@@ -27,6 +27,9 @@
   "peerDependencies": {
     "kysely": ">=0.28.8"
   },
+  "dependencies": {
+    "@kysera/core": "workspace:*"
+  },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^25.0.3",
