feat(examples): comprehensive examples overhaul with Docker and RLS plugin
Add Docker setup, migrations, and improve all three example applications
to be fully functional, tested, and idempotent.

Docker Infrastructure:
- Add examples/docker-compose.yml with PostgreSQL on port 5433
- Add examples/init-db.sql to create separate databases for each example
- Add .env.example files for all three examples

Blog-App Example:
- Use unique timestamps in emails for idempotent runs
- Demonstrates: soft-delete, pagination, health checks, repository pattern

E-Commerce Example:
- Add migrations.ts with 6 migrations (categories, products, cart_items,
  orders, order_items, inventory_movements)
- Add migrate.ts runner and seed.ts for initial data
- Fix PostgreSQL decimal → number coercion (z.coerce.number())
- Fix cart total and subtotal calculations (parseFloat for string results)
- Demonstrates: transactions, optimistic locking, order state machine

Multi-Tenant-SaaS Example:
- Complete rewrite to use @kysera/rls plugin properly
- Add @kysera/executor and @kysera/rls dependencies
- Add migrations.ts with 5 migrations (tenants, users, projects, tasks,
  audit_logs)
- Add migrate.ts runner and seed.ts (2 tenants with users/projects/tasks)
- Use rlsContext.runAsync() for tenant context management
- Filter policies automatically add WHERE tenant_id clauses
- Get tenant_id from rlsContext in repository for INSERT operations
- Add MIGRATION_GUIDE.md documenting upgrade from manual filtering
- Demonstrates: automatic tenant isolation, cross-tenant protection,
  context switching, system context bypass

Package Updates:
- Update Zod to ^4.2.1 across all packages
- Add dotenv to e-commerce and multi-tenant-saas examples

All examples:
- TypeScript builds pass without errors
- Can run multiple times without duplicate key errors
- Tested against real PostgreSQL database in Docker

--- a/examples/multi-tenant-saas/package.json
+++ b/examples/multi-tenant-saas/package.json
@@ -8,18 +8,22 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
-    "migrate": "tsx src/db/migrate.ts"
+    "migrate": "tsx src/db/migrate.ts",
+    "seed": "tsx src/db/seed.ts"
   },
   "dependencies": {
     "@kysera/core": "workspace:*",
+    "@kysera/executor": "workspace:*",
     "@kysera/repository": "workspace:*",
+    "@kysera/rls": "workspace:*",
     "@kysera/audit": "workspace:*",
     "@kysera/timestamps": "workspace:*",
     "@kysera/infra": "workspace:*",
     "@kysera/debug": "workspace:*",
     "kysely": "^0.28.9",
     "pg": "^8.16.3",
-    "zod": "^4.1.13"
+    "zod": "^4.2.1",
+    "dotenv": "^17.2.3"
   },
   "devDependencies": {
     "@types/node": "^25.0.3",
