--- a/examples/e-commerce/package.json
+++ b/examples/e-commerce/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
-    "migrate": "tsx src/db/migrate.ts"
+    "migrate": "tsx src/db/migrate.ts",
+    "seed": "tsx src/db/seed.ts"
   },
   "dependencies": {
     "@kysera/core": "workspace:*",
@@ -19,7 +20,8 @@
     "@kysera/debug": "workspace:*",
     "kysely": "^0.28.9",
     "pg": "^8.16.3",
-    "zod": "^4.1.13"
+    "zod": "^4.2.1",
+    "dotenv": "^17.2.3"
   },
   "devDependencies": {
     "@types/node": "^25.0.3",
