feat: production-grade PostgreSQL schema support across all packages
This commit implements comprehensive PostgreSQL schema support enabling
multi-tenant applications with schema-per-tenant isolation pattern.

- Add `schemaPlugin` for unified schema management with validation
- Add `replaceInto` and `mergeInto` to INTERCEPTED_METHODS (MySQL REPLACE, SQL MERGE)
- Add `INITIALIZATION_FAILED` to PluginValidationErrorType
- Add `__schema` property to KyseraExecutorMarker for schema context tracking
- Add `BaseRepositoryLike` interface and `isRepositoryLike` type guard for plugins
- Export `SchemaValidationError` and `getResolvedSchema` utilities

- Add `createSchemaContext()` for schema-scoped database contexts
- Add `schema` option to `CreateContextOptions` interface
- Preserve schema context through transactions and savepoints
- Add `rollbackErrorMode` and `onRollbackError` to TransactionOptionsWithLogger
- Export advanced symbols (DB_CONTEXT_SYMBOL, IN_TRANSACTION_SYMBOL, etc.)
- Export `TransactionRequiredError` class

- Add `SchemaOptions` interface for schema-aware operations
- Add schema parameter to all adapter methods (tableExists, getTables, etc.)
- Add `SchemaCopyOptions.includeTables` for selective schema cloning
- Add complete MySQL foreign key error codes (ER_ROW_IS_REFERENCED_2, etc.)
- Implement schema management for PostgreSQL and MSSQL adapters

- Add `withSchema()` support in base repository
- Preserve schema context in transactions

- Add comprehensive PostgreSQL integration tests for executor (18 tests)
- Add comprehensive PostgreSQL integration tests for DAL (19 tests)
- Add PostgreSQL integration tests for dialects package
- Tests cover: withSchema, plugin interception, SchemaPlugin, transactions,
  cross-schema operations, multi-tenant patterns

- Synchronize dialects.md with implementation (MySQL error codes, SchemaCopyOptions)
- Synchronize executor.md with implementation (INTERCEPTED_METHODS, error types,
  BaseRepositoryLike, __schema propert

--- a/packages/rls/package.json
+++ b/packages/rls/package.json
@@ -39,7 +39,8 @@
   "peerDependencies": {
     "kysely": ">=0.28.8",
     "@kysera/executor": "workspace:*",
-    "@kysera/repository": "workspace:*"
+    "@kysera/repository": "workspace:*",
+    "zod": ">=3.0.0"
   },
   "peerDependenciesMeta": {
     "@kysera/executor": {
@@ -47,6 +48,9 @@
     },
     "@kysera/repository": {
       "optional": true
+    },
+    "zod": {
+      "optional": false
     }
   },
   "dependencies": {
@@ -65,7 +69,8 @@
     "pg": "^8.16.3",
     "tsup": "^8.5.1",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.16"
+    "vitest": "^4.0.16",
+    "zod": "^3.24.2"
   },
   "keywords": [
     "kysely",
