--- a/packages/executor/package.json
+++ b/packages/executor/package.json
@@ -29,10 +29,12 @@
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
-    "@types/node": "^24.10.1",
+    "@types/node": "^25.2.1",
+    "@types/pg": "^8.16.0",
     "@vitest/coverage-v8": "^4.0.16",
     "better-sqlite3": "^12.5.0",
     "kysely": "^0.28.9",
+    "pg": "^8.16.3",
     "tsup": "^8.5.1",
     "typescript": "^5.9.3",
     "vitest": "^4.0.16"
