--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -77,6 +77,7 @@
     "@faker-js/faker": "^10.1.0",
     "js-yaml": "^4.1.1",
     "@kysera/core": "workspace:*",
+    "@kysera/dialects": "workspace:*",
     "@kysera/repository": "workspace:*",
     "@kysera/migrations": "workspace:*",
     "@kysera/audit": "workspace:*",
