--- a/packages/repository/tsconfig.json
+++ b/packages/repository/tsconfig.json
@@ -12,5 +12,5 @@
     "noUncheckedIndexedAccess": false
   },
   "include": ["src/**/*", "test/**/*", "*.config.ts"],
-  "exclude": ["node_modules", "dist", "test/multi-db.test.ts"]
+  "exclude": ["node_modules", "dist", "test/multi-db.test.ts", "test/operators.integration.test.ts"]
 }
