ci: fix GitHub Pages deployment, update README
deploy-docs.yml: add --ignore-scripts to pnpm install to skip
better-sqlite3 native module compilation (not needed for Docusaurus).

release.yml: add paths-ignore for website/** so website-only pushes
don't trigger the test/release pipeline.

README.md: comprehensive rewrite reflecting current v0.8.6 state —
badges, MongoDB-style operators, RLS, infrastructure, CLI, architecture
diagram, example apps, and updated code samples.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - 'website/**'
+      - '.github/workflows/deploy-docs.yml'
   workflow_dispatch:
     inputs:
       version:
